# cote-lang

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  parser_test.cpp
lib/: AST.h  CMakeLists.txt  Expr.h  FileStructure  ast.cpp  ast.h  bytecode_emitter.cpp  bytecode_emitter.h  codegen.cpp  codegen.h  concept.h  equals.h  exceptions.cpp  exceptions.h  expr_semantic.cpp  expr_semantic.h  ins_to_string.h  lexer.cpp  lexer.h  misc.h  mish.h  nodes.cpp  parser.cpp  parser.h  var_manager.cpp  var_manager.h  vm.cpp  vm.h
lib/semantics/: analyzer.cpp  analyzer.h  exception.h
src/: CMakeLists.txt  FileStructure  JITRuntime.cpp  JITRuntime.h  Trace.cpp  Trace.h  Type.h  ast.cpp  ast.h  bytecode_emitter.cpp  bytecode_emitter.h  codegen.h  exceptions.h  expr_semantic.cpp  expr_semantic.h  gc.cpp  gc.h  heap.cpp  heap.h  ins_to_string.h  jit_runtime.cpp  jit_runtime.h  lang_stdlib.cpp  lang_stdlib.h  lexer.cpp  lexer.h  misc.cpp  misc.h  nodes.cpp  nodes.h  parser.cpp  parser.h  trace.cpp  trace.h  value.h  var_manager.cpp  var_manager.h  vm.cpp  vm.h
tests/: CMakeLists.txt  analyze_param_test.cpp  compile_test.cpp  compile_test_param.cpp  gc_test.cpp  jit_basic_tests.cpp  jit_program_test.cpp  jit_tests.cpp  parser_test.cpp  parser_test_param.cpp  test1.ct  utils.h  vm_test.cpp
tests/sources/: arrget1.ct  arrset1.ct  crazy_object.ct  floatarithmetic.ct  jitPlayground.ct  jitSimple.ct  jitSimple2.ct  some_program.ct  test1.ct  test2.ct  test3.ct  test4.ct  test5.ct  test6.ct  test6mini.ct  test7.ct  test8.ct  test_fact20.ct  test_quicksort.ct  test_sort1.ct
tests/sources/gc/: test_arraylink.ct  test_arraylink_from_foo.ct  test_arraylink_from_foo_mini.ct  test_arraylink_mini.ct  test_crazylink.ct  test_cyclelink.ct  test_cyclelink_mini.ct  test_dead_local_link.ct  test_global_cycle.ct  test_innerlink.ct  test_innerlink_mini.ct  test_multi_comp_graph.ct  test_nulling.ct  test_promote.ct  test_survive.ct
